# MLOps-Project-2025-Flower-Classification

./: .gitignore  EXAM README.md  README copy.md  README.md  backend_requirements.txt  cloudbuild.yaml  frontend_requirements.txt  labels.csv  preprocess_requirements.txt  project_description.md  pyproject.toml  requirements.txt  tasks.py  train_requirements.txt
.devcontainer/: devcontainer.json
.dvc/: config
.github/workflows/: linting.yaml
data/: .gitignore  flower_labels.csv.dvc  labels.csv.dvc  raw_images.dvc
data/102flowers/: raw_images.dvc
dockerfiles/: api.dockerfile  backend.dockerfile  frontend.dockerfile  preprocess.dockerfile  train.dockerfile
src/flowerclassif/: backend.py  code that ran without resnet18.py  code_with_resnet18.py  demo.py  frontend.py  gc_preprocess.py  predict.py  preprocess.py  preprocess1.py  train.py
